Enhance practical guides with detailed explanations and examples.